[package]
name = "snarkos-objects"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Objects for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "e33cfef", version = "0.0.1", default-features = false }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "e33cfef", version = "0.0.1", default-features = false }

snarkos-errors = { path = "../errors", version = "1.1.4", default-features = false }
snarkos-models = { path = "../models", version = "1.1.4", default-features = false }
snarkos-utilities = { path = "../utilities", version = "1.1.4", default-features = false }

base58 = { version = "0.1" }
bech32 = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
derivative = { version = "2" }
hex = { version = "0.4.2" }
once_cell = { version = "1.5.2" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.9" }

[dev-dependencies]
snarkvm-dpc = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "e33cfef", default-features = false }

bincode = { version = "1.3.1" }

[features]
default = [
    "snarkvm-algorithms/default",
    "snarkvm-curves/default",
    "snarkos-errors/default",
    "snarkos-models/default",
    "snarkos-utilities/default",
]
