[package]
name = "snarkos-parameters"
version = "1.2.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parameters for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
version = "0.0.5"
default-features = false

[dependencies.snarkvm-errors]
version = "0.0.5"
default-features = false

[dependencies.snarkvm-models]
version = "0.0.5"
default-features = false

[dependencies.snarkvm-utilities]
version = "0.0.5"
default-features = false

[dependencies.curl]
version = "0.4.34"
optional = true

[dev-dependencies.snarkvm-curves]
version = "0.0.5"

[dev-dependencies.snarkvm-dpc]
version = "0.0.6"

[dev-dependencies.snarkvm-marlin]
version = "0.0.5"

[dev-dependencies.snarkvm-objects]
version = "0.0.5"

[dev-dependencies.snarkvm-parameters]
version = "0.0.5"

[dev-dependencies.snarkvm-posw]
version = "0.0.5"

[dev-dependencies.snarkos-consensus]
path = "../consensus"
version = "1.1.4"

[dev-dependencies.snarkos-storage]
path = "../storage"
version = "1.1.4"

[dev-dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dev-dependencies.curl]
version = "0.4.34"

[dev-dependencies.hex]
version = "0.4.2"

[dev-dependencies.parking_lot]
version = "0.11.1"

[dev-dependencies.rand]
version = "0.8"

[features]
default = [
  "remote",
  "snarkvm-algorithms/default",
  "snarkvm-models/default"
]
remote = [ "curl" ]
