[package]
name = "snarkos-parameters"
version = "1.3.11"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Parameters for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.snarkvm-algorithms]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"
default-features = false

[dependencies.snarkvm-parameters]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dependencies.arc-swap]
version = "1.2"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"
default-features = false

[dependencies.curl]
version = "0.4.36"
optional = true

[dev-dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dev-dependencies.snarkvm-dpc]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dev-dependencies.snarkvm-marlin]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dev-dependencies.snarkvm-posw]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "7076567"

[dev-dependencies.snarkos-consensus]
path = "../consensus"
version = "1.3.4"

[dev-dependencies.snarkos-storage]
path = "../storage"
version = "1.3.4"

[dev-dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dev-dependencies.curl]
version = "0.4.34"

[dev-dependencies.hex]
version = "0.4.2"

[dev-dependencies.rand]
version = "0.8"

[features]
default = [ "remote", "snarkvm-algorithms/default" ]
remote = [ "curl" ]
